--- a/build.gradle
+++ b/build.gradle
@@ -13,10 +13,7 @@ dependencies {
     //Change 'implementation' to 'compile' in old Gradle versions
     implementation("net.dv8tion:JDA:5.0.0-beta.9")
     implementation 'io.github.cdimascio:dotenv-java:3.0.0'
-    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
-    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
-    implementation 'net.dv8tion:JDA:5.0.0-beta.5'
-    implementation 'net.dv8tion:JDA:5.0.0-beta.5'
+    implementation 'org.slf4j:slf4j-simple:2.0.7'
 }
 
 test {
